fixed appbar not showing correct colors

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,9 +15,9 @@ html{
 	background-color: #D3D3D3;
 	color:red;
 } */
-.MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation4.MuiAppBar-root.MuiAppBar-colorPrimary.MuiAppBar-positionFixed.mui-fixed.css-11b3ww9-MuiPaper-root-MuiAppBar-root{
+/* .MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation4.MuiAppBar-root.MuiAppBar-colorPrimary.MuiAppBar-positionFixed.mui-fixed.css-11b3ww9-MuiPaper-root-MuiAppBar-root{
 	background-color:#000000;
-}
+} */
 .buttonStart {
 
 	-webkit-animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
